<resources>
    <string name="app_name">Vicinity Valet</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>


    <!-- Navigation -->
    <string name="navigation_item_home">Home</string>
    <string name="navigation_item_nfc">NFC</string>
    <string name="navigation_item_beacons">Beacons</string>
    <string name="navigation_item_wifi">WiFi</string>
    <string name="navigation_item_geofences">Geofences</string>
    <string name="navigation_accessibility_description">Navigation Drawer used to switch between major features of the application</string>

    <string name="lipsum">Lorem ipsum dolor sit amet, id ullum moderatius has, hinc adipisci cu sed. Eirmod signiferumque sed ne. An senserit gubergren quo. Postulant dissentiet usu ut, per amet utamur scribentur te. Persius legendos mei an. At suas cotidieque eos, ex adolescens mnesarchum complectitur mea, ex eos natum aeque urbanitas. Sea ex ponderum rationibus. Cibo commune antiopam his an, cu duo unum movet antiopam. Sumo aeterno cotidieque sit at, alii tacimates vel an. Causae corpora eos ad, eos eius aliquip vivendo ad. Atqui congue gloriatur te eum. Quo id summo nostrum consequuntur, quidam saperet conclusionemque cu ius. Quo at facer menandri vulputate, no qui sale invidunt definitiones, mea aeque delicatissimi an. Qui an latine labitur, ad eum laudem gubergren.</string>
</resources>
